src/styles/_main.scss
.body {
    display: grid;
    grid-template-columns: repeat(auto, 1fr);
    gap: var(--marginSize);
    overflow-x: scroll;
    &__column {
        min-width: 380px;
        box-sizing: border-box;
        height: calc(100vh - var(--marginSize) * 2);
        background-color: var(--subColor);
        border-radius: var(--borderRadius);
        padding: 0 var(--paddingSize) var(--paddingSize) var(--paddingSize);
        margin: var(--marginSize) 0;
        overflow-y: scroll;
        opacity: 0;
        animation: fadeIn ease-in 1;
        animation-fill-mode: forwards;
        animation-duration: 0.3s;
        animation-delay: 0.2s;
        position: relative;
        &:first-child {
            margin-left: var(--marginSize);
        }
        &:last-child {
            margin-right: var(--marginSize);
        }
        &-header {
            background-color: var(--bgColor);
            padding: 10px 20px;
            margin: 0;
            border-radius: var(--borderRadius);
            text-align: center;
            font-size: 1.2em;
            border: 1px solid #333;
            text-overflow: ellipsis;
            overflow: hidden;
            white-space: nowrap;
            &-container {
                background-color: var(--subColor);
                padding: var(--paddingSize) 0;
                position: sticky;
                top: 0;
                left: 0;
                right: 0;
                z-index: 997;
                cursor: pointer;
            }
            &-icon {
                width: 18px;
                height: 18px;
                vertical-align: middle;
                margin: -2px 0 0 0;
                padding: 0 10px 0 0;
            }
        }
    }
}

.error {
    background-color: #f44336;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    font-weight: 700;
    border-radius: 10px;
    padding: 10px;
    position: fixed;
    top: 20px;
    right: 20px;
    z-index: 999;
}

@keyframes fadeIn {
    0% {
        mask: linear-gradient(90deg, #000 25%, #000000e6 50%, #00000000) 150% 0 /
            400% no-repeat;
        opacity: 0.2;
    }
    100% {
        mask: linear-gradient(90deg, #000 25%, #000000e6 50%, #00000000) 0 /
            400% no-repeat;
        opacity: 1;
    }
}

@media screen and (max-width: 450px) {
    :root {
        --marginSize: 10px;
    }
    .body {
        scroll-snap-type: x mandatory;
        &__column {
            width: calc(100vw - var(--marginSize) * 2);
            min-width: auto;
            scroll-snap-align: start;
            min-block-size: calc(100vw - var(--marginSize) * 2);
            scroll-snap-stop: always;
        }
    }
}

